File Name: CHANGES

02/16/2017 FASP 1.9.9:
- Fix ILUtp problem with permutation.
- Separate BlaIOUtil.inl from BlaIO.c.
- Set pointer to NULL after fasp_mem_free().
- Update user's guide.
- Remove the old BiCGstab code.
- Fix problem 9 in regression_mm: results are OK now.
- Fix problem 7 in regression_mm for AMG as well.
- Update regression test results.

02/10/2017 FASP 1.9.8:
- Now automatic build test works.
- Add and test BitBucket Pipelines automatic test tool.
- Fix warnings about fgets, fread, fscanf, scanf, etc in Ubuntu.
- Remove CHMEM_MODE with DEBUG_MODE > 1.
- Update output of tutorial examples.
- Update user's guide to the most updated version.
- Update TODO list.
- Update documentation and reference manual.
- Test fasp webapge. 

02/01/2017 FASP 1.9.7:
- Clean up *.inl files.
- Fix more warnings by xcode; some still left: unused functions, doxygen.
- Change header file auto-generator output.
- Clean up TCL installation script and help message.
- Change a few functions from public to private.
- Mark TODO's in various C files.
- Update reference manual.
- Test CMake on Linux 2.6.18-164.el5.perfctr x86_64.
- Add PGCR for BLC matrices.

01/30/2017 FASP 1.9.6:
- Modify fasp.h (affect all FASP projects).
  -- Change itsolver_param ==> ITS_param.
  -- Change Schwarz_* ==> SWZ_*.
  -- Change precond_diagstr ==> precond_diag_str.
  -- Reordering.
- Update parameters in ini/*.
- Change a few inconsistent function names: _array_ ==> _darray_.
- Move things around.
- Clean up all files.
- Add legal information.
- Update file dependency information.
- Remove a few unwanted functions, e.g., fasp_mem_check.
- Change name of some private functions.
- Change CMake behavior a little: finding Fortran part.
- Add xcode project for faspsolver.
- Fix Doxgyen problems found by xcode.

01/28/2017 FASP 1.9.5:
- Happy Chinese New Year!
- Test GCC 5.4.0.
- Fix most warnings and mark unresolved warnings.
- Fix Doxygen problems.
- Further clean up on Aux*.c and Bla*.c files.