@@ -19,7 +19,7 @@
       99 ./base/src/AuxConvert.c
       86 ./base/src/AuxGivens.c
      769 ./base/src/AuxGraphics.c
-     797 ./base/src/AuxInput.c
+     800 ./base/src/AuxInput.c
      216 ./base/src/AuxMemory.c
      295 ./base/src/AuxMessage.c
      998 ./base/src/AuxParam.c
@@ -101,4 +101,4 @@
      242 ./base/src/SolMatFree.c
      413 ./base/src/SolSTR.c
      320 ./base/src/SolWrapper.c
-   85057 total
+   85060 total
